app/styles/components/c-loader.scss
@import '../_settings';

.c-loader {
  position: relative;

  &.-absolute {
    position: absolute;
    z-index: 103;
    height: 100%;
    width: 100%;
    background-color: rgba($color-1, 0.7);

    > .loader-container {
      position: relative;
      top: 50%;
      left: 50%;
      margin: 0;
      transform: translate(-50%, -50%);
      background-color: transparent;
    }
  }

  &.-tiny {
    align-items: center;
    background-color: $color-19;
    border-radius: 50%;
    box-shadow: 0 0 8px 0 rgba($color-22, .3);
    color: $color-4;
    display: flex;
    height: 40px;
    justify-content: center;
    text-align: center;
    width: 40px;

    .loader-container {
      position: absolute;
      width: 20px;
      height: 25px;
      background-color: transparent;

      > .loader-bubble::before {
        height: 5px;
        width: 5px;
      }
    }
  }

  .loader-container {
    width: 65px;
    margin: 0 auto;
    height: 65px;
    background-color: rgba($color-1, 0.7);

    > .loader-bubble {
      height: 100%;
      left: 0;
      position: absolute;
      top: 0;
      width: 100%;

      &::before {
        animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
        background-color: $color-4;
        border-radius: 100%;
        content: '';
        display: block;
        height: 10px;
        margin: 0 auto;
        width: 10px;
      }

      // set initial values
      $rotation: 45;
      $delay: -1.1;
      // iterate from elements 1 to 8
      @for $i from 1 through 8 {
        &:nth-child(#{$i}) {
          transform: rotate(#{$rotation}deg);

          &::before {
            animation-delay: #{$delay}s;
          }
        }
        // update values for next iteration
        $rotation: $rotation + 45;
        $delay: $delay + 0.1;
      }
    }
  }
}

@-webkit-keyframes sk-circleBounceDelay {
  0%,
  80%,
  100% {
    transform: scale(0);
  }

  40% {
    transform: scale(1);
  }
}

@keyframes sk-circleBounceDelay {
  0%,
  80%,
  100% {
    transform: scale(0);
  }

  40% {
    transform: scale(1);
  }
}

